SOC-2327 | fix: center image on firefox and ie

--- a/front/main/app/styles/component/_discussion-hero-unit.scss
+++ b/front/main/app/styles/component/_discussion-hero-unit.scss
@@ -105,10 +105,6 @@ $discussion-hero-unit-minimized-height: 25px;
 		max-height: 100%;
 		min-height: 200px;
 		overflow: hidden;
-
-		.image-edit-preview {
-			max-width: none;
-		}
 	}
 
 	.error-message-container {
